ImpressCMS ChangeLog
=== ImpressCMS 1.3.2 Beta ===
Release date: March 2012
Revision: 
DB Version: 42
Build Version: 56

Improved
* HTML Purifier updated to 4.4.0
* SimplePie updated to 1.2.1

Fixed
* Fixes in lost password and find user
* Database collation properly selected with newer versions of MySQL
* Search results

Details of this release are found on Assembla - http://impresscmsdev.assembla.com/spaces/impresscms/milestones/671493-impresscms-1-3-2

=== ImpressCMS 1.3.1 Final ===
Release date: 21 December 2011
Revision: 11506
DB Version: 41
Build Version: 55

Security Fix:
* Several security vulnerabilities reported by High-Tech Bridge SA Security Research Lab - HTB23064: https://www.htbridge.ch/advisory/multiple_vulnerabilities_in_impresscms.html

=== ImpressCMS 1.3.1 RC ===
Release date: 21 December 2011
Revision: 11502
DB Version: 41
Build Version: 53

Maintenance release...
Details of this release are found in the workspace on Assembla - http://impresscmsdev.assembla.com/spaces/impresscms/milestones/585713-impresscms-1-3-1

<-- Migrated to Assembla workspace and split the repository into core and addons -->

=== ImpressCMS 1.3 Final ===
Release date: 18 September 2011
Revision: 22698
DB Version: 41
Build Version: 50

A complete list of changes to this release series can be found here - http://sourceforge.net/apps/trac/impresscms/query?status=closed&group=component&order=priority&col=id&col=summary&col=milestone&col=status&col=type&col=priority&col=component&milestone=ImpressCMS+1.3

=== ImpressCMS 1.3 Release Candidate 2 ===
Release date: 1 September 2011
Revision: 22516
DB Version: 41
Build Version: 49

A complete list of changes to this release series can be found here - http://sourceforge.net/apps/trac/impresscms/query?status=closed&group=component&order=priority&col=id&col=summary&col=milestone&col=status&col=type&col=priority&col=component&milestone=ImpressCMS+1.3

=== ImpressCMS 1.3 Release Candidate ===
Release date: 19 July 2011
Revision: 22079