@@ -1,7 +1,13 @@
 ImpressCMS ChangeLog
-=== ImpressCMS 1.3.2 Beta ===
+=== ImpressCMS 1.3.2 RC ===
 Release date: March 2012
 Revision: 
+DB Version: 42
+Build Version: 57
+
+=== ImpressCMS 1.3.2 Beta ===
+Release date: March 2012
+Revision: 11636
 DB Version: 42
 Build Version: 56
 
